--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/slorreina369/social-network#readme",
   "dependencies": {
-    "mongoose": "^6.5.4",
-    "validator": "^13.7.0"
+    "mongoose": "^6.5.4"
   }
 }
